# CTP

./: tiger.cabal
src/: Lexer.x  Main.hs  Parser.y
test/: t1.txt
