
name:                tiger
version:             0.1.0.0
synopsis:            Compilador para Tiger-0
description:         Compilador para Tiger-0
author:              Filipe Colla David
maintainer:          up201810097@up.pt
category:            Language
build-type:          Simple
cabal-version:       >=1.10
                     
executable tiger
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-tools:         alex, happy
  build-depends:       base, array
  hs-source-dirs:      src
  default-language:    Haskell2010